# ELEC_SHOP-2.0

./: README.md  main.py  pyproject.toml
tests/: test_main.py
workshop/: instantiatecsverror.py  item.py  keyboard.py  phone.py
