[tool.poetry]
name = "elshop"
version = "0.1.0"
description = ""
authors = ["GoodOleNothing <alexgog77777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
